--- a/views/usuario/index.html
+++ b/views/usuario/index.html
@@ -1,27 +1,314 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style4.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Área aluno</title>
+    <title>Area Aluno</title>
 </head>
 <body>
-    <div class="my-classes">
-        <h1>Minhas turmas</h1>
+    <header>    
+        <div class="main-logo">
+            <img src="/images/image 1.svg" alt="">
+        </div>
+    </header>
 
-        <div class="box">
-            <h1>Turma A</h1>
+    <section class="teach-class-main">
+
+        <div class="menu"></div>
+
+        <div class="teach-class-logo">
+            <img src="/images/Rectangle 44.svg" alt="">
+
+            <h1>Senai TeachClass</h1>
         </div>
 
-        <div class="box">
-            <h1>Turma B</h1>
+        <div class="user-pfp">
+            <img src="" alt="">
+        </div>
+    </section>
+
+    <section class="banner">
+
+        <div class="banner-txt">
+            <h3>Seja bem vindo ao<br>Senai TeachClass</h3>
         </div>
 
-        <div class="box">
-            <h1>Turma C</h1>
+
+        <div class="banner-bck">
+            <img src="/images/Ellipse 11.png" alt="">
         </div>
+
+        <div class="banner-bck1">
+            <img src="/images/Ellipse 11.png" alt="">
+        </div>
+
+        <div class="banner-bck2">
+            <img src="/images/Ellipse 11.png" alt="">
+        </div>
+
+        <div class="banner-bck3">
+            <img src="/images/Ellipse 11.png" alt="">
+        </div>
+
+        <!-- -->
+
+        <div class="banner-img">
+            <img src="/images/Ellipse 16.png" alt="">
+        </div>
+
+        <div class="banner-content">
+            <h3>
+                "SENAI TeachClass é a plataforma de<br>ensino online que oferece cursos técnicos<br> de excelência ministrados por instrutores<br>experientes e abrange uma ampla<br> variedade de disciplinas técnicas."
+            </h3>
+        </div>
+
+    </section>
+
+    <section class="wtd">
+        <div class="hello">
+            <h1>Olá, user</h1>
+            <span>O que vamos fazer hoje?</span>
+        </div>
+    </section>
+
+    <section class="options">
+        <div class="wtd-card">
+            <img src="/images/Rectangle 48.png" alt="">
+            <h3>Verificar atividades<br>pendentes</h3>
+            <img src="/images/Rectangle 52.png" alt="">
+        </div>
+
+        <div class="wtd-card">
+            <img src="/images/Rectangle 49.png" alt="">
+            <h3>Adicionar uma nova<br>turma</h3>
+            <img src="/images/Rectangle 52.png" alt="">
+        </div>
+
+        <div class="wtd-card">
+            <img src="/images/Rectangle 50.png" alt="">
+            <h3>Checar notas</h3>
+            <img src="/images/Rectangle 52.png" alt="">
+        </div>
+    </section>
+
+    <div class="class">
+        <h1>Suas Turmas</h1>
     </div>
 
-    <span>deu tempo n kkkkkkkkk</span>
+    <section class="teach-class-card">
+
+    
+
+        <div class="class-main-card">
+            <div class="card-img">
+                <img src="/images/Group 43.png" alt="">
+            </div>
+
+            <div class="teach-user-pfp">
+                <img src="/images/Ellipse 6.png" alt="">
+            </div>
+
+            <div class="card-title">
+                <h1>Turma A</h1>
+            </div>
+
+            <div class="class-code">
+                <span>X9R4M</span>
+            </div>
+
+            <div class="owner-name">
+                <h3>Ricardo Santos</h3>
+            </div>
+        </div>
+
+        <div class="class-main-card">
+            <div class="card-img">
+                <img src="/images/Group 46.png" alt="">
+            </div>
+
+            <div class="teach-user-pfp">
+                <img src="/images/Ellipse 9.png" alt="">
+            </div>
+
+            <div class="card-title">
+                <h1>Turma B</h1>
+            </div>
+
+            <div class="class-code">
+                <span>F8W0Z</span>
+            </div>
+
+            <div class="owner-name">
+                <h3>Ana Oliveira</h3>
+            </div>
+        </div>
+        </div>
+
+        <div class="class-main-card">
+            <div class="card-img">
+                <img src="/images/Group 47.png" alt="">
+            </div>
+
+            <div class="teach-user-pfp">
+                <img src="/images/Ellipse 8.png" alt="">
+            </div>
+
+            <div class="card-title">
+                <h1>Turma C</h1>
+            </div>
+
+            <div class="class-code">
+                <span>Y1N6J</span>
+            </div>
+
+            <div class="owner-name">
+                <h3>Laura Fernandes</h3>
+            </div>
+        </div>
+        </div>
+        
+    </section>
+    <footer>
+        <div id="footer_content">
+
+            <div id="footer_contacts">
+                <img src="/images/Senai-logo.png" alt="">
+                <p>Seviço de Atendimento ao Cliente:</p>
+                <h1>4020 9030</h1>
+                
+                <p>Ouvidoria:</p>
+                <h1>0800 882 2525</h1>
+
+                <p>Geral:</p>
+                <h1>(31) 3834-5678</h1>
+
+                <p2>Horário de funcionamento:
+                    Segunda a sexta-feira das 8h às 17h
+                    Exceto feriados nacionais e locais.</p2>
+            </div>
+
+            <ul class="footer_list1">
+                <li>
+                    <a href="" class="footer_link">Conheça o SENAI</a>
+                </li>
+
+                <li>
+                    <a href="" class="footer_link">Fale Conosco</a>
+                </li>
+
+                <li>
+                    <a href="" class="footer_link">Intranet</a>
+                </li>
+            </ul>
+
+            <ul class="footer_list2">
+                <li>
+                    <a href="" class="footer_link">Gestão 2022-2025</a>
+                </li>
+
+                <li>
+                    <a href="" class="footer_link">Trabalhe Conosco</a>
+                </li>
+
+                <li>
+                    <a href="" class="footer_link">Estatuto FIEMG</a>
+                </li>
+
+                <li>
+                    <a href="" class="footer_link">Ouvidoria</a>
+                </li>
+
+                <li>
+                    <a href="" class="footer_link">Integridade</a>
+                </li>
+
+                <li>
+                    <a href="" class="footer_link">Aviso de Privacidade e Proteção de Dados</a>
+                </li>
+
+                <li>
+                    <a href="" class="footer_link">Manual de Marcas</a>
+                </li>
+
+                <li>
+                    <a href="" class="footer_link">Política de Segurança da Informação</a>
+                </li>
+
+                <li>
+                    <a href="" class="footer_link">Sindicatos Filiados</a>
+                </li>
+            </ul>
+
+        <div class="final">
+            <ul class="footer_list3">
+                <li>
+                    <a href="" class="footer_link">Calendário da Indústria</a>
+                </li>
+
+                <li>
+                    <a href="" class="footer_link">Pagamento RPA</a>
+                </li>
+
+                <li>
+                    <a href="" class="footer_link">Pagamento a Empresas</a>
+                </li>
+
+                <li>
+                    <a href="" class="footer_link">Licitações e Compras</a>
+                </li>
+
+
+            </ul>
+            
+            <p>Acompanhe a FIEMG</p>   
+
+            <div id="footer_social_media">
+
+               
+
+                
+
+                <a href="#" class="footer-link" id="twitter">
+                    <i class="fa-brands fa-twitter"></i>
+                </a>
+
+                <a href="#" class="footer-link" id="facebook">
+                    <i class="fa-brands fa-facebook-f"></i>
+                </a>
+
+                <a href="#" class="footer-link" id="youtube">
+                    <i class="fa-brands fa-youtube"></i>
+                </a>
+
+                <a href="#" class="footer-link" id="Linkedin">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+
+                <a href="#" class="footer-link" id="instagram">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </div>
+            
+        </div>
+
+
+
+
+        </div>
+
+    </footer>
 </body>
 </html>
